# AspectOrbital

./: .env.example  .gitignore  COMMANDS.md  CONTRIBUTING.md  DATA_RETENTION_POLICY.txt  INFORMATION_SECURITY_POLICY.md  INFORMATION_SECURITY_POLICY.txt  INSTALL.md  KALSHI_NO_SIDE_PLAN.md  PRIVACY.md  README.md  TODO.md  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: ci.yml
cmd/accountability-spoke/: .env.example  README.md  config.go  config_test.go  discord_callback.go  http.go  http_test.go  main.go  main_test.go  openai_vision.go  openai_vision_test.go  policies.example.json  policies.go  policies.json  policies_test.go
cmd/beeminder-spoke/: .env.example  Dockerfile  README.md  app.go  beeminder_client.go  config.go  config_test.go  control_catalog.go  control_commands.go  cycle.go  cycle_test.go  discord_callback.go  goal_math.go  goal_math_test.go  http_handlers.go  http_handlers_test.go  http_json.go  hub_client.go  main.go  reminder_engine.go  reminder_engine_test.go  status_text.go  test_helpers_test.go
cmd/discord-hub/: .env.example  Dockerfile  README.md  REVIEW.md  app.go  app_test.go  channel_map.go  config.go  config_test.go  constants.go  discord_commands.go  discord_commands_test.go  discord_interactions.go  discord_interactions_test.go  handlers_health.go  handlers_health_test.go  handlers_notify.go  main.go  (+7 more)
cmd/kalshi-spoke/: .env.example  Cargo.toml  Dockerfile  README.md  main.go
cmd/kalshi-spoke/src/: app.rs  commands.rs  config.rs  discord.rs  formatting.rs  http.rs  kalshi.rs  main.rs  models.rs  rules.rs  state.rs  summaries.rs  trading.rs  triggers.rs  ws.rs
contracts/: spoke-contract-v1.schema.json  spoke-contract-v2.schema.json
deployments/: docker-compose.yml
scripts/: check_changed_coverage.sh
(+57 files in other folders)
