[package]
name = "kalshi-spoke"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
futures-util = "0.3"
http = "1.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rsa = { version = "0.9", features = ["pem", "sha2"] }
rust_decimal = "1.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.6"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tempfile = "3.20"
url = "2.5"
